--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/icons-material": "^5.15.20",
     "@mui/joy": "5.0.0-beta.36",
     "@mui/material": "^5.14.18",
     "@mui/system": "^5.15.20",
